--- a/Build.props
+++ b/Build.props
@@ -1,8 +1,38 @@
-<?xml version="1.0" encoding="utf-8"?> 
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
-  <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
-  <ItemDefinitionGroup />
-  <ItemGroup />
+  <PropertyGroup Label="UserMacros">
+    <bin_dir>$(SolutionDir)bin</bin_dir>
+    <lib_dir>$(SolutionDir)lib</lib_dir>
+    <obj_dir>$(SolutionDir)obj</obj_dir>
+    <include_dir>$(SolutionDir)include</include_dir>
+  </PropertyGroup>
+  <PropertyGroup>
+    <OutDir>$(lib_dir)</OutDir>
+    <IntDir>$(obj_dir)</IntDir>
+  </PropertyGroup>
+  <ItemDefinitionGroup>
+    <ClCompile>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup>
+    <ClCompile>
+      <WarningLevel>Level4</WarningLevel>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemGroup>
+    <BuildMacro Include="bin_dir">
+      <Value>$(bin_dir)</Value>
+    </BuildMacro>
+    <BuildMacro Include="lib_dir">
+      <Value>$(lib_dir)</Value>
+    </BuildMacro>
+    <BuildMacro Include="obj_dir">
+      <Value>$(obj_dir)</Value>
+    </BuildMacro>
+    <BuildMacro Include="include_dir">
+      <Value>$(include_dir)</Value>
+    </BuildMacro>
+  </ItemGroup>
 </Project>
